# wavimg

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
src/: cli.cpp  cli.hpp  common.hpp  file_audio.cpp  file_audio.hpp  file_image.cpp  file_image.hpp  main.cpp  spec_math.cpp  spec_math.hpp  spec_options.hpp  spec_types.hpp  spectrogram.cpp  spectrogram.hpp
